<resources>
    <string name="app_name">SaritechNew</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="insert_product">Insert Product</string>
    <string name="product_name">Product Name</string>
    <string name="product_price">Product Price</string>
    <string name="product_quantity">Product Quantity</string>
    <string name="add">Add</string>
    <string name="cancel">Cancel</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="add_product">Add_Product</string>
    <string name="Add_Product">Add Product</string>
    <string name="barcode_not_recognized">Barcode Not Recognized</string>
    <string name="barcode_not_recognized_do_you_want_to_add_it">Barcode not recognized. Do you want to add it?</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="last_name">Last Name</string>
    <string name="email_or_phone_number">Email or Phone Number</string>
    <string name="first_name">First Name</string>
    <string name="SariSariStore" />
    <string name="waleeey" />
    <string name="wala" />
    <string name="TextEmailOrValue">Email or Phone Number</string>
    <string name="TextPassword">Password</string>
</resources>