<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:id="@+id/text_view_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Add_Product"
        android:textSize="20sp"
        android:textStyle="bold"
        android:gravity="center"
        android:padding="16dp" />

    <EditText
        android:id="@+id/edit_text_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/product_name"
        android:inputType="text"
        android:minHeight="48dp"
        android:autofillHints="Name"
        tools:ignore="VisualLintTextFieldSize" />

    <EditText
        android:id="@+id/edit_text_price"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/product_price"
        android:inputType="number"
        android:minHeight="48dp"
        android:autofillHints="Price"
        tools:ignore="VisualLintTextFieldSize" />

    <EditText
        android:id="@+id/edit_text_quantity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/product_quantity"
        android:inputType="number"
        android:minHeight="48dp"
        android:autofillHints="1"
        tools:ignore="VisualLintTextFieldSize" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button_insert"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/add"
            style="?android:attr/buttonBarButtonStyle"
            tools:ignore="VisualLintButtonSize" />

        <Button
            android:id="@+id/button_cancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/cancel"
            style="?android:attr/buttonBarButtonStyle"
            tools:ignore="VisualLintButtonSize" />

    </LinearLayout>
</LinearLayout>
